[package]
name = "webgl-engine"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
nalgebra = "0.18.0"
typenum = "1.10.0"
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "DomRectReadOnly",
    "Element",
    "EventTarget",
    "HtmlElement",
    "HtmlCanvasElement",
    "MouseEvent",
    "Node",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
]
